Fixed presentation buttons, new div alignment

--- a/HY469/Css/Header.css
+++ b/HY469/Css/Header.css
@@ -1,5 +1,5 @@
 html,body,blockquote,code,h1,h2,h3,h4,h5,h6,p,pre{margin:0;padding:0}
-div{margin:0;padding:0;background-color:transparent;text-align:left}
+div{margin:50px;padding:0;background-color:transparent;text-align:left}
 
 .TopPanel {
   position: absolute;
@@ -17,36 +17,15 @@ div{margin:0;padding:0;background-color:transparent;text-align:left}
   top: 0px;
 }
 
-.SidePanel {
-  /* Steve: equal height of the children, otherwise
-  div wthin a div do not start from same height*/
-  display: flex;
-  overflow: hidden;
+.NextSlidePanel {
   position: relative;
   float:left;
   width: 248px;
-  height: 354px;
+  height: 178px;
   left: 0px;
   top: 0px;
+  text-align: center;
   background-color: #c8c8c8
-}
-
-.NextSlidePanel {
-  position: relative;
-  width: 248px;
-  height: 178px;
-  left: 0px;
-  top: 0px;
-  text-align: center;
-}
-
-.PresentationControlsPanel {
-  position: relative;
-  width: 248px;
-  height: 178px;
-  left: -248px;
-  top: 178px;
-  text-align: center;
 }
 
 h1.NextSlideText {
@@ -62,18 +41,27 @@ h1.NextSlideText {
   color: #383838;
 }
 
+.PresentationControlsPanel {
+  position: relative;
+  float: left;
+  width: 248px;
+  height: 178px;
+  left: 0px;
+  top: 0px;
+  text-align: center;
+  background-color: #c8c8c8
+}
+
 .buttonHeader {
   background-color:white;
   background-size: cover;
+  display: inline;
   border: none;
   width: 45px;
   height: 45px;
-  margin: 5px 5px;
+  border-radius: 6px;
+  margin: 4px 0px;
   cursor: pointer;
-}
-
-.buttonHeader:hover {
-  background-color: rgb(163, 215, 255);
 }
 
 .buttonHeader:active {
